# glitch

./: .env.example  .gitignore  Dockerfile  README.md  architecture.md  assumptions.md  config.example.env  docker-compose.yml  pyproject.toml  requirements.txt
src/daylight/: __init__.py  backfill.py  config.py  db.py  ingest.py  object_storage.py
src/glitch/: __init__.py  cloudflare.py  config.py  db.py  ingest.py  models.py  object_storage.py  rehydrate.py
tests/: test_cloudflare.py  test_config.py  test_db.py  test_models.py  test_object_storage.py  test_rehydrate_integration.py
